--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build && next export -o out"
   },
   "author": "",
   "license": "ISC",
